# geffe_generator

./: CMakeLists.txt
main/: geffe_generator_driver.cpp  registers_recovery.cpp
src/: geffe_generator.cpp  geffe_generator.hpp  lfsr.cpp  lfsr.hpp  register_recovery.cpp  register_recovery.hpp
test/: L1_recovery_test.cpp  L2_recovery_test.cpp  lfsr_test.cpp
